# PoolPumpControl

./: .gitignore  CMakeLists.txt  sdkconfig
TempSensor/: ds18b20.c  ds18b20.h
front/: index.html
main/: CMakeLists.txt  ProjectConfig.h  WifiConfig.h  main.c  projectLog.h  pumpControl.c  pumpControl.h  sysTime.c  sysTime.h  temperature.c  temperature.h  webServer.c  webServer.h
